@@ -5,7 +5,7 @@
 	<groupId>com.slytechs.jnet.jnetpcap</groupId>
 	<artifactId>jnetpcap-wrapper</artifactId>
 	<!--  mvn versions:set -DnewVersion=_new_version_  -->
-	<version>2.1.1-SNAPSHOT</version>
+	<version>2.3.0-SNAPSHOT</version>
 	<name>jNetPcap Wrapper</name>
 	<description>A java wrapper for native LIBPCAP library and PCAP API</description>
 	<url>https://www.jnetpcap.org</url>
@@ -14,7 +14,7 @@
 		<project.build.sourceEncoding>${java.encoding}</project.build.sourceEncoding>
 		<maven.compiler.source>${jdk.version}</maven.compiler.source>
 		<maven.compiler.target>${jdk.version}</maven.compiler.target>
-		<java.preview>--enable-preview</java.preview>
+		<java.preview />
 		<java.encoding>UTF-8</java.encoding>
 		<java.native>--enable-native-access=ALL-UNNAMED</java.native>
 		<groups>user-permission</groups>
@@ -42,22 +42,23 @@
 		<dependency>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-compiler-plugin</artifactId>
-			<version>3.13.0</version>
+			<version>3.11.0</version>
 		</dependency>
-		<!-- 
+		<!--
 		https://mvnrepository.com/artifact/org.junit.platform/junit-platform-suite-api  -->
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-suite-api</artifactId>
-			<version>1.11.0-M2</version>
+			<version>1.9.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.11.0-M2</version>
+			<version>5.9.1</version>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 	<build>
 		<resources>
@@ -83,7 +84,7 @@
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
 					<release>${jdk.version}</release>
-					<enablePreview>true</enablePreview>
+					<enablePreview>false</enablePreview>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -152,17 +153,17 @@
 					</execution>
 				</executions>
 			</plugin>
+
 			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>1.6.13</version>
+				<groupId>org.sonatype.central</groupId>
+				<artifactId>central-publishing-maven-plugin</artifactId>
+				<version>0.5.0</version>
 				<extensions>true</extensions>
 				<configuration>
-					<serverId>ossrh</serverId>
-					<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
-					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+					<publishingServerId>central</publishingServerId>
 				</configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-gpg-plugin</artifactId>
@@ -192,6 +193,22 @@
 			</plugin>
 		</plugins>
 	</build>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>
+				https://central.sonatype.com/api/v1/publisher/deployments/download</url>
+		</repository>
+		<!--  mvn clean site site:stage scm-publish:publish-scm  -->
+		<site>
+			<id>github</id>
+			<url>scm:git:git@github.com:slytechs-repos/${parent.project}.git</url>
+		</site>
+	</distributionManagement>
 	<reporting>
 		<plugins>
 			<plugin>
@@ -375,24 +392,8 @@
 		<connection>
 			scm:git:git://github.com/slytechs-repos/${project.artifactId}.git</connection>
 		<developerConnection>
-			scm:git:ssh:git://github.com/slytechs-repos/${project.artifactId}.git</developerConnection>
-		<url>https://github.com/slytechs-repos/${project.artifactId}</url>
-		<tag>jnetpcap-wrapper-2.1.0</tag>
+			scm:git:ssh:git://github.com/slytechs-repos/${parent.project}.git</developerConnection>
+		<url>https://github.com/slytechs-repos/${parent.project}</url>
+		<tag>jnetpcap-wrapper-${project.version}</tag>
 	</scm>
-	<distributionManagement>
-		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-		<repository>
-			<id>ossrh</id>
-			<url>
-				https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-		</repository>
-		<!--  mvn clean site site:stage scm-publish:publish-scm  -->
-		<site>
-			<id>github</id>
-			<url>scm:git:git@github.com:slytechs-repos/${project.artifactId}.git</url>
-		</site>
-	</distributionManagement>
 </project>
